@@ -104,9 +104,16 @@ body, html, body > .ember-view {
   }
 
   .breadcrumb {
+    padding: 5px 15px;
     font-size: 16px;
     .active .sub {
       font-size: 12px;
+    }
+
+    .fa-home:before {
+      position: relative;
+      font-size: 1.5em;
+      top: 2px;
     }
   }
 
