@@ -17,7 +17,7 @@
 }}
 
 <ul class="breadcrumb">
-  <li class="active">All Dags</li>
+  <li>{{#link-to 'application'}}<i class="fa fa-home"> All Dags</i>{{/link-to}} <span class="divider"></span></li>
 </ul>
 
 <div class='margin-small-vertical'>
