@@ -15,4 +15,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 }}
+
+<ul class="breadcrumb">
+  <li>{{#link-to 'application'}}<i class="fa fa-home"> All Dags</i>{{/link-to}} <span class="divider"></span></li>
+  <li class="active">Error</span></li>
+</ul>
+
 <h1>An Error Occurred</h1>
