@@ -17,7 +17,7 @@
 }}
 
 <ul class="breadcrumb">
-  <li>{{#link-to 'dags'}}All Dags{{/link-to}} <span class="divider"></span></li>
+  <li>{{#link-to 'application'}}<i class="fa fa-home"> All Dags</i>{{/link-to}} <span class="divider"></span></li>
   <li>{{#link-to 'dag.vertices' dagID}}Dag{{/link-to}} <span class="divider"></span></li>
   <li class="active">Vertex - <span class='sub'>{{name}}</span></li>
 </ul>
